Version NEXT
============

:Released: FUTURE
:Maintainer:

* Refine compatibility of exceptions for file operations.


Version 2.0.4
=============

:Released: 2015-01-23
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

* Record version info via Setuptools commands.
* Remove the custom Setuptools entry points.
  This closes Alioth bug#314948.


Version 2.0.3
=============

:Released: 2015-01-14
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

* Break circular import dependency for ‘setup.py’.
* Refactor all initial metadata functionality to ‘daemon._metadata’.
* Distribute ‘version’ (and its tests) only in source, not install.
* Build a “universal” (Python 2 and Python 3) wheel.


Version 2.0.2
=============

:Released: 2015-01-13
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

* Declare test-time dependency on recent ‘unittest2’.
* Declare packaging-time dependency on ‘docutils’ library.
* Include unit tests for ‘version’ module with source distribution.
* Record version info consistent with distribution metadata.


Version 2.0.1
=============

:Released: 2015-01-11
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

* Include the ‘version’ module with source distribution.


Version 2.0
===========

:Released: 2015-01-10
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

* Support both Python 3 (version 3.2 or later) and Python 2 (version
  2.7 or later).
* Document the API of all functions comprehensively in docstrings.
* Add a hacking guide for developers.
* Add explicit credit for contributors.
* Document the security impact of the default umask.

* Specify explicit text or binary mode when opening files.
* Preserve exception context in custom exceptions.

* Declare compatibility with current Python versions.
* Depend on Python 3 compatible libraries.
* Update package homepage to Alioth hosted project page.
* Use ‘pydoc.splitdoc’ to get package description text.
* Remove ASCII translation of package description, not needed now the